fix to overflow

--- a/app/javascript/stylesheets/_dr_authorized_user.scss
+++ b/app/javascript/stylesheets/_dr_authorized_user.scss
@@ -13,6 +13,8 @@
     }
     text-align: right;
     margin-top: 5px;
+    overflow: hidden;
+    max-width: 150px;
     span {
       color: $color;
     }
