--- a/app/javascript/stylesheets/_dr_links.scss
+++ b/app/javascript/stylesheets/_dr_links.scss
@@ -86,6 +86,7 @@
 
 .breadcrumb {
   padding: 0;
+  overflow: hidden;
   transition: 0.3s;
   margin-bottom: 0;
   background-color: inherit;
