--- a/app/javascript/stylesheets/_single_task.scss
+++ b/app/javascript/stylesheets/_single_task.scss
@@ -3,6 +3,7 @@
     &__text {
       font-size: 15px;
       margin-top: 2rem;
+      overflow: hidden;
     }
   }
   &-adress {
