--- a/app/javascript/stylesheets/customer_profile.scss
+++ b/app/javascript/stylesheets/customer_profile.scss
@@ -33,6 +33,7 @@
   }
   &__name {
     margin-bottom: 1rem;
+    overflow: hidden;
     @media (max-width: 767px) {
       text-align: center;
     }
